maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:34: error: ':' expected but ')' found.
def isDirectionFree(dir):Boolean = {
                       ^Escaper:42: error: identifier expected but '}' found.
}
^